# FA_TT

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1f3ea2cb1d31_create_user_and_task_tables.py  2b2b36a2bd0e_add_task_reports_table.py
apps/app1/: pyproject.toml
apps/app1/app/: main.py
apps/app2/: pyproject.toml
apps/app2/app/: main.py
docker/: app1.Dockerfile  app2.Dockerfile  python-base.Dockerfile
docker/grafana/dashboards/: advanced-observability.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: advanced_messaging_bus.md  template.md
docs/diagrams/: README.md
docs/security/: hardening.md
projects/01-beginner/: .env.example  Dockerfile  README.md
projects/01-beginner/tests/: conftest.py  test_auth_api.py  test_services.py  test_tasks_api.py
projects/02-intermediate/: .env.example  Dockerfile  README.md
projects/02-intermediate/docs/: README.md  job-processing.mmd  request-lifecycle.mmd
projects/02-intermediate/docs/samples/: task_reports.sample.json
projects/03-advanced/: .env.example  Dockerfile  README.md
projects/03-advanced/docs/: README.md  component-map.mmd  deployment-checklist.md  realtime-messaging-flow.mmd
scripts/: advanced_pipeline_demo.py
src/projects/: __init__.py
src/projects/01-beginner/: .env.example  Dockerfile  __init__.py  docker-entrypoint.sh
src/projects/01-beginner/app/: __init__.py  deps.py  errors.py  main.py
src/projects/01-beginner/app/api/: __init__.py
src/projects/01-beginner/app/api/routers/: __init__.py  auth.py  health.py  users.py
src/projects/01-beginner/app/core/: __init__.py  config.py  logging.py  security.py
src/projects/01-beginner/app/db/: __init__.py  base.py  seed.py  session.py
src/projects/01-beginner/app/models/: __init__.py  task.py  user.py
src/projects/01-beginner/app/repositories/: __init__.py  base.py  tasks.py
src/projects/01-beginner/app/schemas/: __init__.py  system.py  task.py
src/projects/01-beginner/app/services/: __init__.py  auth.py  tasks.py  users.py
src/projects/02-intermediate/: __init__.py
src/projects/02-intermediate/app/: __init__.py  deps.py  main.py  worker.py
src/projects/02-intermediate/app/activity/: __init__.py  connection.py  models.py  service.py
src/projects/02-intermediate/app/api/: __init__.py
src/projects/02-intermediate/app/api/routers/: __init__.py  auth.py  jobs.py  tasks.py
src/projects/02-intermediate/app/core/: cache.py  config.py  context.py  jobs.py  logging.py  middleware.py  session.py  templates.py
src/projects/02-intermediate/app/db/: __init__.py  base.py  seed.py  session.py
src/projects/02-intermediate/app/jobs/: __init__.py  reporting.py
src/projects/02-intermediate/app/models/: __init__.py  common.py  report.py  user.py
src/projects/02-intermediate/app/repositories/: __init__.py  reports.py  tasks.py  users.py
src/projects/02-intermediate/app/schemas/: __init__.py  auth.py  report.py  system.py  task.py  user.py
src/projects/02-intermediate/app/services/: __init__.py  auth.py  reports.py  tasks.py
src/projects/02-intermediate/app/static/css/: main.css
src/projects/02-intermediate/app/templates/: base.html
src/projects/02-intermediate/app/templates/activity/: _event_list.html  index.html
src/projects/02-intermediate/app/templates/auth/: login.html  register.html
src/projects/02-intermediate/app/templates/notes/: _note_item.html  index.html
src/projects/02-intermediate/app/views/: __init__.py  activity.py  auth.py  notes.py  pages.py
src/projects/03-advanced/: __init__.py
src/projects/03-advanced/app/: __init__.py  auth.py  config.py  main.py  messaging.py  realtime.py  security.py  telemetry.py  worker.py
src/projects/03-advanced/app/templates/: index.html
tests/: test_activity_log.py  test_advanced_messaging_bus.py  test_advanced_observability.py  test_advanced_realtime.py  test_background_jobs.py  test_error_handling.py  test_logging.py  test_placeholder.py  test_settings_profiles.py  test_task_cache.py
tests/projects/: test_beginner_app.py
tests/projects/01-beginner/: test_auth_api.py  test_services.py  test_tasks_api.py
(+2 files in other folders)
