[tool.poetry]
name = "bootstrap-tooling"
version = "0.1.0"
description = "Bootstrap Python project with shared tooling."
authors = ["cto.new <dev@cto.new>"]
readme = "README.md"
packages = [{ include = "projects", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.1"
mypy = "^1.11.2"
pytest = "^8.3.3"
coverage = "^7.6.4"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "src/.+\\.pyi?$"
