[tool.poetry]
name = "bootstrap-tooling"
version = "0.1.0"
description = "Bootstrap Python project with shared tooling."
authors = ["cto.new <dev@cto.new>"]
readme = "README.md"
packages = [{ include = "projects", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
fastapi = "^0.120.0"
httpx = "^0.27.0"
pydantic-settings = {extras = ["dotenv"], version = "^2.11.0"}
sqlalchemy = "^2.0.44"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
black = "^24.10.0"
coverage = "^7.6.4"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.1"

[tool.poetry.scripts]
beginner-app = "projects.01-beginner.app.main:run"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src/projects/01-beginner/app"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = ["pragma: no cover"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "src/.+\\.pyi?$"
